Adicionando rota para a função de deletar solicitação

--- a/templates/RF004A-detlSolic.html
+++ b/templates/RF004A-detlSolic.html
@@ -53,7 +53,7 @@
                     <!-- Botão para encaminhar a solicitação, redirecionando para outra página -->
                 <a href="/RF005/{{campo_id_solicitacao}}"><button class="botao botao-cadastro">Encaminhar</button></a>
                 <!-- Botão para excluir esta solicitação-->
-                <a href=""><button class="botao botao-excluir">Excluir</button></a>
+                <a href="/deletar-solicitacao/{{campo_id_solicitacao}}"><button class="botao botao-excluir">Excluir</button></a>
                 </div>
                 
             </div>
