Termino do seletor de funcionarios destaque

--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -91,6 +91,7 @@ nav{
 }
 
 .caixa-opcao {
+  max-height: 10rem;
   padding: 1rem 4rem 1rem 1rem;
   margin: 1rem 2rem 1rem 2rem;
   cursor: pointer;
@@ -112,6 +113,7 @@ nav{
 .caixa-opcao.selected {
   border: 2px solid var(--color03);
   box-shadow: none;
+  transform: scale(1.1);
 }
 
 .caixa-opcao img{
