--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -190,7 +190,7 @@ input,select{
     border: 2px solid var(--color03);
 }
 /* ------------RESPONSIVIDADE------------------- */
-@media (max-width:376px) {
+@media (min-width:376px) {
 
     .container-main h1 {
         font-size: 2.5rem;
@@ -198,10 +198,7 @@ input,select{
 }
 
 @media(min-width:400px){
-    .container-main {
-        height: 100vh;
-    }
-
+  
     .form_btn-enviar{
         margin: 3rem 0rem 1rem 0rem;
     }
